# shortener_test_task

./: Dockerfile  README.md  database.py  docker-compose.yaml  main.py  pyproject.toml  schemas.py  utils.py
app/: crud.py  database.py  models.py
