[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Etherial <typicaluserinfinite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.43"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
